<resources>
    <string name="app_name">DrFit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="information">Information</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_month">This Month</string>
    <string name="last_month">Last Month</string>
    <string name="this_week">This Week</string>
    <string name="last_week">Last Week</string>
    <string name="details">Details</string>
</resources>
